--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "devDependencies": {
-        "@rocket.chat/apps-engine": "^1.11.2",
-        "@types/node": "14.14.6",
-        "tslint": "^5.10.0",
-        "typescript": "^4.2.3"
+        "@rocket.chat/apps-engine": "^1.27.1",
+        "@types/node": "^16.7.2",
+        "tslint": "^6.1.3",
+        "typescript": "^4.3.5"
     }
 }
